--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
+    "recursive-readdir": "^2.1.0",
     "serve-favicon": "~2.3.2"
   }
 }
